[gd_scene load_steps=13 format=3 uid="uid://cgf7uvh5s73b"]

[ext_resource type="Script" path="res://Scripts/Menus/MainMenuController.gd" id="1_rw32m"]
[ext_resource type="StyleBox" uid="uid://br3q7seea3e66" path="res://StyleBoxs/BUTTONS/Large_BTN_Normal.tres" id="2_3n2ho"]
[ext_resource type="StyleBox" uid="uid://cu01oadluwcjf" path="res://StyleBoxs/BUTTONS/Medium_BTN_Normal.tres" id="3_ufgyx"]
[ext_resource type="StyleBox" uid="uid://bgxmsfycoqn0n" path="res://StyleBoxs/SLIDER/Simple_Slider_BG.tres" id="4_mg7dg"]
[ext_resource type="StyleBox" uid="uid://cb4b84dypqyud" path="res://StyleBoxs/SLIDER/Simple_Slider_FG.tres" id="5_8r6fj"]
[ext_resource type="StyleBox" uid="uid://bgjupor2fsbx" path="res://StyleBoxs/SLIDER/Simple_Slider_hover_BG.tres" id="6_ab2pt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c41o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hi0fw"]
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klytb"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
border_color = Color(0.281187, 0.281187, 0.281187, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 25.0
expand_margin_top = 5.0
expand_margin_right = 25.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3l8hk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ofwm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 4.0
expand_margin_top = 5.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4iad"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 55.0
expand_margin_top = 55.0
expand_margin_right = 55.0
expand_margin_bottom = 55.0

[node name="Master" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rw32m")
EndSizeLarge = Vector2(1.3, 1.3)
DurLarge = 0.2
EndSizeSmall = Vector2(1.1, 1.1)
DurSmall = 0.1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="BTN_LEVELS" type="Button" parent="MarginContainer/VBoxContainer/Control"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.5
offset_top = -114.5
offset_right = 264.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(264, 114)
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_3n2ho")
theme_override_styles/hover = ExtResource("2_3n2ho")
theme_override_styles/pressed = ExtResource("2_3n2ho")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c41o")
text = "LEVELS"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="BTN_Settings" type="Button" parent="MarginContainer/VBoxContainer/Control3"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -75.0
offset_right = 300.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 75)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("3_ufgyx")
theme_override_styles/hover = ExtResource("3_ufgyx")
theme_override_styles/pressed = ExtResource("3_ufgyx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c41o")
text = "Settings"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(575, 300)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_hi0fw")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="BTN_Exit" type="Button" parent="MarginContainer/VBoxContainer/Control2"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(300, 75)
theme_override_colors/font_color = Color(0.935004, 0.244249, 0.165944, 1)
theme_override_colors/font_pressed_color = Color(0.933333, 0.243137, 0.164706, 1)
theme_override_colors/font_hover_color = Color(0.933333, 0.243137, 0.164706, 1)
theme_override_colors/font_hover_pressed_color = Color(0.933333, 0.243137, 0.164706, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("3_ufgyx")
theme_override_styles/hover = ExtResource("3_ufgyx")
theme_override_styles/pressed = ExtResource("3_ufgyx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c41o")
text = "Exit"

[node name="MC_settings" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MC_settings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MC_settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BTN_Save" type="Button" parent="MC_settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("3_ufgyx")
text = "Return"

[node name="AUDIO" type="VBoxContainer" parent="MC_settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="MUSIC" type="VBoxContainer" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_klytb")
text = "AUDIO"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="Label" type="Label" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music Volume"

[node name="VSeparator" type="VSeparator" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.14
theme_override_styles/separator = SubResource("StyleBoxFlat_3l8hk")

[node name="HSlider" type="HSlider" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer"]
custom_minimum_size = Vector2(1310, 140)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/slider = ExtResource("4_mg7dg")
theme_override_styles/grabber_area = ExtResource("5_8r6fj")
theme_override_styles/grabber_area_highlight = ExtResource("6_ab2pt")
max_value = 10.0
value = 3.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="Label" type="Label" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SFX Volume"

[node name="VSeparator" type="VSeparator" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.14
theme_override_constants/separation = 116
theme_override_styles/separator = SubResource("StyleBoxFlat_0ofwm")

[node name="HSlider" type="HSlider" parent="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer2"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = ExtResource("4_mg7dg")
theme_override_styles/grabber_area = ExtResource("5_8r6fj")
theme_override_styles/grabber_area_highlight = ExtResource("6_ab2pt")
max_value = 10.0
value = 3.0
tick_count = 10
ticks_on_borders = true

[node name="MC_levels" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MC_levels"]
clip_contents = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j4iad")

[node name="HFlowContainer" type="HFlowContainer" parent="MC_levels/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 135
theme_override_constants/v_separation = 140

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Control/BTN_LEVELS" to="." method="_on_btn_levels_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Control/BTN_LEVELS" to="." method="_on_btn_levels_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/BTN_LEVELS" to="." method="_on_btn_levels_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Control3/BTN_Settings" to="." method="_on_btn_settings_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Control3/BTN_Settings" to="." method="_on_btn_settings_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control3/BTN_Settings" to="." method="_on_btn_settings_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Control2/BTN_Exit" to="." method="_on_btn_exit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Control2/BTN_Exit" to="." method="_on_btn_exit_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control2/BTN_Exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="MC_settings/ScrollContainer/VBoxContainer/BTN_Save" to="." method="_on_btn_save_pressed"]
[connection signal="value_changed" from="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MC_settings/ScrollContainer/VBoxContainer/AUDIO/MarginContainer/MUSIC/HBoxContainer2/HSlider" to="." method="_on_sfxh_slider_value_changed"]
